objects/cwbtool__AnalysisSummary__c.object
<CustomObject>
    <fields>
        <fullName>cwbtool__AnalysisLink__c</fullName>
        <formula>HYPERLINK(&quot;/apex/cwbtool__ImpactAnalysis?savedAnalysisId=&quot;+ Id, &quot;Click here to view analysis&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Analysis Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__ExportToPDF__c</fullName>
        <formula>HYPERLINK(&quot;/apex/cwbtool__ExportToPDF?savedAnalysisId=&quot;+ Id, &quot;Export To PDF&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Export To PDF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Field__c</fullName>
        <label>Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Object__c</fullName>
        <label>Object</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Summary__c</fullName>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <label>Analysis Summary</label>
    <listViews>
        <fullName>cwbtool__All</fullName>
        <columns>NAME</columns>
        <columns>cwbtool__Object__c</columns>
        <columns>cwbtool__Field__c</columns>
        <columns>cwbtool__AnalysisLink__c</columns>
        <columns>cwbtool__ExportToPDF__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>cwbtool__Summary__c</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AS-{0000}</displayFormat>
        <label>Analysis Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Analysis Summary</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>